# stock-indicators-etl

./: README.md  airflow_dag.py  data_download_yahoo.py  data_indicators.py  pyproject.toml
stockdata/: indicators.py  utils.py
