[tool.poetry]
name = "stockdata"
version = "0.1.0"
description = "Stock data engineering"
package-mode = false
authors = ["Sri Sasmi Polu <sasmipolu@gmail.com>"]
readme = "README.md"
packages = [
    {include = "stockdata"}
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.5.3"

numpy = "1.26.3"
pandas = "2.1.4"
yfinance = ">=0.2.31"
ta-lib = ">=0.4.28"
boto3 = "1.35.26"
pyspark = "^3.5.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-mock = "~3.11.1"
pytest-asyncio = "^0.21.1"
mypy = "^1.0.0"
ruff = "^0.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "W", "I", "C4", "B", "ASYNC", "UP007", "UP035"]
ignore = ["E501"]
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["stockdata"]

[tool.mypy]
follow_imports = "normal"